--- a/Decision Tree & Cluster-wise Decision Tree.ipynb
+++ b/Decision Tree & Cluster-wise Decision Tree.ipynb
@@ -295,11 +295,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Build a full decision tree \n",
+    "There are two options to be made in tree construction--split metric and tree pruning approach. Four trees are built to gauge who each combinations of options work.\n",
     "\n",
-    "* cross validation\n",
+    "Model evaluation metric: $R^2$ with 10-fold cross-validation \n",
     "\n",
-    "* select the best cp"
+    "Split metrics: \n",
+    "\n",
+    "1. The Gini Index\n",
+    "\n",
+    "2. Entropy\n",
+    "\n",
+    "Tree pruning approaches:\n",
+    "\n",
+    "1. Aggressive: The complexity parameter `cp` that leads to the maximum cross-validation $R^2$.\n",
+    "\n",
+    "2. Conservative: The largest `cp` within one standard deviation of the aggressive `cp`."
    ]
   },
   {
@@ -459,12 +469,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Given t"
+    "In conclusion, using `information` or `gini` doesn't make much difference on model performance.\n",
+    "The aggressive approach to tree pruning achieves better results.\n",
+    "\n",
+    "Based on the performance on the train set and cross-validation set, I select the Gini Index as the split metric and adopt the aggressive tree pruning approach to build the final decisin tree."
    ]
   },
   {
